[package]
name = "libfnb"
version = "1.0.0"
edition = "2021"
description = "Native wrapper around various dependencies for fnb"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[dependencies]
fdeflate = "0.3.7"
libc = "0.2.168"
png = "0.17.15"
