[package]
name = "fnb-native"
version = "1.0.0"
edition = "2021"
description = "Native auxiliary library for Tomat.FNB"

[lib]
crate-type = ["cdylib"]

[profile.release]
# Optimize for speed above all in release builds.  We also save space where we
# can since we package several versions of the binary for different targets in
# releases.
lto = "fat"         # link-time optimization; fat for most aggressive (slowest)
codegen-units = 1   # one thread for codegen so it doesn't miss any opts
panic = "abort"     # abort on panic to avoid unwinding overhead
strip = "debuginfo" # strip debug info to make the binary smaller

[dependencies]
fdeflate = "0.3.7"
png = "0.17.15"
